# ansible-lint-custom-rules

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  mypy.ini  package.spec.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  test.yml  tests-2.yml  tests-in-centos.yml  tests.yml
rules/: BlacklistedModuleRule.py  BlockedModules.py  DebugRule.py  FileHasValidNameRule.py  FileIsSmallEnoughRule.py  FileIsUnixFileRule.py  LoopIsRecommendedRule.py  NoEmptyDataFilesRule.py  NoUnspecifiedArgumentRule.py  PlaybookFileHasValidNameRule.py  RoleVarsStartWithRoleNameRule.py  TaskHasValidNamePatternRule.py  TaskHasValidNameRule.py  TasksFileHasValidName.py  TasksFileHasValidNameRule.py  VariablesNamingRule.py  VarsInVarsFilesHaveValidNamesRule.py  VarsShouldNotBeUsedRule.py  _utils.py
tests/: TestBlacklistedModuleRule.py  TestBlockedModules.py  TestDebugRule.py  TestFileHasValidNameRule.py  TestFileIsSmallEnoughRule.py  TestFileIsUnixFileRule.py  TestLoopIsRecommendedRule.py  TestNoEmptyDataFilesRule.py  TestNoUnspecifiedArgumentRule.py  TestPlaybookFileHasValidNameRule.py  TestRoleVarsStartWithRoleNameRule.py  TestTaskHasValidNamePatternRule.py  TestTaskHasValidNameRule.py  TestTasksFileHasValidName.py  TestTasksFileHasValidNameRule.py  TestVariablesNamingRule.py  TestVarsInVarsFilesHaveValidNamesRule.py  TestVarsShouldNotBeUsedRule.py  common.py  main.bats  requirements.txt  test_common.py  test_utils.py
tests/common/: __init__.py  base.py  constants.py  datatypes.py  runner.py  test_base.py  test_runner.py  test_utils.py  testcases.py  utils.py
tests/res/: BlacklistedModuleRule_ng_1.yml  FileIsSmallEnoughRule_ng_1.yml  FileIsUnixFileRule_ng_1.yml  FileIsUnixFileRule_ng_2.yml  LoopIsRecommendedRule_ng_1.yml  LoopIsRecommendedRule_ok_1.yml  NoEmptyDataFilesRule_ok_1.yml  PlaybookFileHasValidNameRule_ng-1.yml  PlaybookFileHasValidNameRule_ok_1.yml  TaskHasValidNamePatternRule_ng_1.yml  TaskHasValidNamePatternRule_ng_2.yml  TasksFileHasValidNameRule_ng_1.yml  TasksFileHasValidNameRule_ng_2.yml  TasksFileHasValidNameRule_ng_3.yml  TasksFileHasValidNameRule_ok.yml  TasksFileHasValidNameRule_ok_1.yml  TasksFileHasValidName_ng_1.yml  TasksFileHasValidName_ng_2.yml  TasksFileHasValidName_ng_3.yml  TasksFileHasValidName_ok.yml  TasksFileHasValidName_ok_1.yml  VariablesNamingRule_ng_1.yml  VariablesNamingRule_ng_2.yml  VariablesNamingRule_ok_1.yml  VariablesNamingRule_ok_2.yml  VarsShouldNotBeUsedRule_ng_1.yml  VarsShouldNotBeUsedRule_ng_2.yml
tests/res/BlacklistedModuleRule/: ok_1.yml
tests/res/BlockedModules/ng/c/: 1.json  1.yml
tests/res/BlockedModules/ok/: 1.yml
tests/res/BlockedModules/ok/c/: 1.json  1.yml
tests/res/DebugRule/: ok_1.yml
tests/res/DebugRule/ng/: 1.yml  roles
tests/res/DebugRule/ng/1/: conf.json
tests/res/DebugRule/ng/2/: env.json  playbook.yml
tests/res/DebugRule/ng/c/: 0.json  0.yml  1.yml
tests/res/DebugRule/ng/env/: 2.yml
tests/res/DebugRule/ok/: .coverage  1.yml
tests/res/DebugRule/ok/1/: playbook.yml
tests/res/DebugRule/ok/c/: 2.json  2.yml
tests/res/FileHasValidNameRule/ng/3/: ng 3.yml
tests/res/FileHasValidNameRule/ng/4/: conf.json
tests/res/FileHasValidNameRule/ng/c/: ng-0.json  ng-0.yml  ng_99.json  ng_99.yml
tests/res/FileHasValidNameRule/ok/2/: ping_ok_２.yml
tests/res/FileHasValidNameRule/ok/c/: ok-1.json  ok-1.yml  ok_２.json  ok_２.yml
tests/res/FileIsSmallEnoughRule/: ok_1.yml
tests/res/FileIsSmallEnoughRule/ng/: 0.yml
tests/res/FileIsSmallEnoughRule/ng/c/: 0.json  0.yml
tests/res/LoopIsRecommendedRule/ng/0/: playbook.yml
tests/res/LoopIsRecommendedRule/ok/: 0.yml
tests/res/NoEmptyDataFilesRule/ng/0/: playbook.yml
tests/res/NoUnspecifiedArgumentRule/ng/1/: playbook.yml
tests/res/PlaybookFileHasValidNameRule/: ok_1.yml
tests/res/RoleVarsStartWithRoleNameRule/ok/1/: playbook.yml
tests/res/TaskHasValidNameRule/: ok_1.yml
tests/res/TaskHasValidNameRule/ng/1/: playbook.yml
tests/res/TaskHasValidNameRule/ok/: 2.yml
tests/res/TaskHasValidNameRule/ok/1/: playbook.yml
tests/res/TaskHasValidNameRule/ok/2/: playbook.yml
tests/res/TaskHasValidNameRule/ok/c/: 2.json  2.yml
tests/res/TasksFileHasValidNameRule/: ng-1.yml  ng_1.yml  ng_2.yml  ng_3.yml  ok_1.yml
tests/res/TasksFileHasValidNameRule/ng/: 1.yml  2.yml
tests/res/TasksFileHasValidNameRule/ok/: 0.yml  1.yml  2.yml
tests/res/TasksFileHasValidNameRule/ok/1/: playbook.yml
tests/res/TasksFileHasValidNameRule/ok/c/: 2.json  2.yml
tests/res/TasksFileHasValidNameRule/tasks/: ok_1.yml
tests/res/VariableHasValidNameRule/ng/: 0.yml
tests/res/VariableHasValidNameRule/ng/c/: 1.json
tests/res/VariableHasValidNameRule/ok/: .coverage
tests/res/VariableHasValidNameRule/ok/roles/: ping
tests/res/VariablesNamingRule/: ng_1.yml  ok_1.yml  ok_2.yml
tests/res/VarsInVarsFilesHaveValidNamesRule/ng/0/: playbook.yml
tests/res/VarsInVarsFilesHaveValidNamesRule/ng/1/: playbook.yml
tests/res/VarsInVarsFilesHaveValidNamesRule/ng/2/: conf.json
tests/res/VarsInVarsFilesHaveValidNamesRule/ok/0/: playbook.yml
tests/res/VarsShouldNotBeUsedRule/: ng_1.yml
tests/res/VarsShouldNotBeUsedRule/ng/0/: playbook.yml
tests/res/VarsShouldNotBeUsedRule/ng/1/: playbook.yml
tests/res/VarsShouldNotBeUsedRule/ok/: 0.yml
tests/res/playbooks/: play_using_role_0.yml  plays_ok_0.yml
tests/res/roles/: no_empty_data_files_rule_ok_1
tests/res/roles/no_empty_data_files_rule_ng_1/defaults/: main.yml
tests/res/roles/no_empty_data_files_rule_ng_1/vars/: main.yml
tests/res/roles/ping/defaults/: main.yml
tests/res/roles/variable_naming_rule_test_ng_1/: tasks
tests/res/tasks/: simple_ping_1.yml
(+33 files in other folders)
