# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = ansiblelint_custom_rules
description = Ansible-lint custom rule examples
project_urls =
    CI: Travis = https://travis-ci.org/ssato/ansible-lint-custom-rules
    Bug Tracker = https://github.com/ssato/ansible-lint-custom-rules/issues
    Source = https://github.com/ssato/ansible-lint-custom-rules
long_description =
    Some code examples to extend ansible-lint by adding custom rules
    implementations.

author = Satoru SATOH
author_email = ssato@redhat.com
maintainer = Satoru SATOH
maintainer_email = ssato@redhat.com
license = MIT
url = https://github.com/ssato/ansible-lint-custom-rules
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages =
    ansiblelint_custom_rules
package_dir =
    ansiblelint_custom_rules = rules

# minimum dependencies.
install_requires =
    setuptools

[options.extras_require]
devel =
    coveralls
    flake8
    mock
    pytest
    pycodestyle
    pylint

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[tool:pytest]
testpaths =
    tests
    rules

python_files = *.py
addopts = --doctest-modules
mock_use_standalone_module = true

# vim:sw=4:ts=4:et:
