# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = ansiblelint_middleware_automation_custom_rules
description = Ansible-lint custom rules used in middleware_automation
project_urls =
    CI: GitHub = https://travis-ci.org/ansible-middleware/ansible-lint-custom-rules
    Bug Tracker = https://github.com/ansible-middleware/ansible-lint-custom-rules/issues
    Source = https://github.com/ansible-middleware/ansible-lint-custom-rules
long_description =
    Custom rules for linting collections made by middleware_automation.

author = Satoru SATOH
author_email = ssato@redhat.com
maintainer = Satoru SATOH
maintainer_email = ssato@redhat.com
license = MIT
url = https://github.com/ansible-middleware/ansible-lint-custom-rules
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages =
    ansiblelint.rules.custom.middleware_automation
package_dir =
    ansiblelint.rules.custom.middleware_automation = rules

# minimum dependencies.
install_requires =
    setuptools
    ansible-lint

[options.extras_require]
devel =
    coveralls
    flake8
    mock
    pytest
    pycodestyle
    pylint

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[tool:pytest]
testpaths =
    tests

python_files =
    test_*.py
    Test*.py

addopts = --doctest-modules -n auto --cov=rules -vv

[flake8]
per-file-ignores =
    tests/common/__init__.py:F401

# vim:sw=4:ts=4:et:
